# AINFTP

./: .gitignore  Cargo.toml  README.md  trigger.py
.cargo/: config.toml
ainftp/: Cargo.toml  build.rs
ainftp-common/: Cargo.toml
ainftp-common/src/: lib.rs
ainftp-core/: Cargo.toml
ainftp-core/src/: lib.rs
ainftp-ebpf/: Cargo.toml
ainftp-ebpf/src/: logic.rs  main.rs  parser.rs
ainftp/src/: main.rs  telemetry.rs
ainftp/src/compute/: cuda.rs  mod.rs  rdma.rs
ainftp/src/consensus/: mod.rs  sentry.rs
ainftp/src/memory/: af_xdp.rs
ainftp/src/network/: packet.rs  swarm..rs  swarm.rs  transport.rs
xtask/: Cargo.toml
xtask/src/: main.rs
