[package]
name = "ainftp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ripemd160 = "0.1"

# Error Handling
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"